@@ -7,6 +7,7 @@
 - added `webp` image size measurement by [Marek Mráz](https://github.com/Mrazbb)
 - added `promise` support for the `TotalAPI()` method
 - fixed `default_cors` option
+- fixed `schema.action()` for the standard REST routes
 
 ========================
 0.0.70
